<resources>
    <string name="app_name">Party Ideas</string>
    <string name="base_api_server">http://dev.bu5hit.xyz:3000</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="official_meetup">Meetup events</string>
    <string name="custom_schedule">Gameroom</string>
    <string name="news">News Feed</string>
    <string name="favourite">Favourite</string>
    <string name="history">Browse History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">Time:</string>
    <string name="venue">Venue:</string>
    <string name="rsvp">RSVP:</string>
    <string name="available">Available:</string>
    <string name="address">Address:</string>
    <string name="account">Account</string>
    <string name="signin_desc">Do you have an account?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="no_acc">I don\'t have an account</string>
    <string name="register">Register</string>
    <string name="register_preset">Almost done!</string>
    <string name="your_activity">My Activity</string>
    <string name="logout">Log out</string>
    <string name="basic_info">Basic information</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="detailed_info">Detailed information</string>
    <string name="date">Date:</string>
    <string name="unset">Touch to set</string>
    <string name="location">Location:</string>
    <string name="duration">Duration:</string>
    <string name="confirm">Confirm</string>
    <string name="slot_limit">Slot:</string>
    <string name="you_must_log_in_first">You must login first</string>
    <string name="status">Status:</string>
    <string name="calendar_view">Calendar View</string>
    <string name="loading">Loading</string>
    <string name="no_desc">No description provided</string>
    <string name="chekout_on_meetup">Checkout on meetup</string>
    <string name="current_status">Current Status</string>
    <string name="pending">Pending approval</string>
    <string name="approved">Approved</string>
    <string name="cancelled">Room cancelled</string>
    <string name="join">Join</string>
    <string name="join_desc">the event</string>
    <string name="save">Save</string>
    <string name="save_desc">into favourite</string>
    <string name="game">Game:</string>
    <string name="shop">Shop</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="signed_in_as">Signed in as:</string>
</resources>
