<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@mipmap/ic_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_offical_meetup"
            android:icon="@mipmap/ic_calendar"
            android:title="@string/official_meetup" />
        <item
            android:id="@+id/nav_cust_schedule"
            android:icon="@mipmap/ic_plan"
            android:title="@string/custom_schedule" />

    </group>

    <item android:title="Actions">
        <menu>
            <item
                android:id="@+id/nav_favourite"
                android:icon="@mipmap/ic_star"
                android:title="@string/favourite" />
            <item
                android:id="@+id/nav_rewind"
                android:icon="@mipmap/ic_clock"
                android:title="@string/history" />
        </menu>
    </item>

</menu>
