<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.partyideas.Fragment.NewPublicMeetupFrag">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/basic_info"
            android:id="@+id/textView10"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:textColor="@color/material_grey_50"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title"
                android:id="@+id/textView11"
                android:padding="16dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/eventTitle"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_gravity="center"
                    android:singleLine="true" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/description"
                android:id="@+id/textView12"
                android:padding="16dp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/descField"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/detailed_info"
            android:id="@+id/textView13"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:textColor="@color/material_grey_50"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/date"
                android:id="@+id/textView14"
                android:padding="16dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/unset"
                    android:id="@+id/dateText"
                    android:layout_gravity="center" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/time"
                android:id="@+id/textView15"
                android:padding="16dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/unset"
                    android:id="@+id/timeText"
                    android:layout_gravity="center" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/game"
                android:id="@+id/textView20"
                android:padding="16dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gameSpinner"
                    android:layout_gravity="center" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/slot_limit"
                android:id="@+id/textView19"
                android:padding="16dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <SeekBar
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/slotSeekBar"
                    android:layout_gravity="center"
                    android:max="20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/slotText"
                    android:layout_gravity="left|center_vertical"
                    android:text="1"
                    android:padding="8dp" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/duration"
                android:id="@+id/textView18"
                android:padding="16dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <SeekBar
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/durationSeekBar"
                    android:layout_gravity="center"
                    android:max="3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/durationText"
                    android:layout_gravity="left|center_vertical"
                    android:text="1"
                    android:padding="8dp" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/location"
                android:id="@+id/textView16"
                android:padding="16dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/locationSpinner"
                    android:layout_gravity="center" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/address"
                android:id="@+id/textView17"
                android:padding="16dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/addressView"
                    android:layout_gravity="center" />
            </FrameLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:id="@+id/confirm"
                android:layout_gravity="center" />
        </FrameLayout>

    </LinearLayout>


</ScrollView>
